--- a/web/test.html
+++ b/web/test.html
@@ -1,6 +1,6 @@
 <div ng-controller="AppFlashMessengerCtrl">
     <div ng-repeat="alert in alerts" class="alert alert-{{alert.type}}" close="closeAlert($index)">
-        <button type="button" class="close" ng-click="closeAlert($index)"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <button type="button" class="close" ng-click="alert.close()"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
         {{alert.msg}}
     </div>
 </div>
